tester/testsuite/bad/bad078.jl
int main() {
    if(true <= false) {
        printInt(2);
    }

    return 1;
}
